--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="py.com.purplemammoth.apps.yoelijopy.ui.MainTabActivity"
+            android:name=".ui.MainTabActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -19,6 +19,15 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.ConsultaPadronActivity"
+            android:label="@string/title_activity_consulta_padron"
+            android:parentActivityName=".ui.MainTabActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="py.com.purplemammoth.apps.yoelijopy.ui.MainTabActivity" />
         </activity>
     </application>
 
