--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,7 @@ dependencies {
 
     // Image Loader
     compile 'com.github.bumptech.glide:glide:3.6.1'
+
+    // Appearence
+    compile 'uk.co.chrisjenx:calligraphy:2.1.0'
 }
