--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,13 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:design:23.0.1'
-    compile 'com.android.support:cardview-v7:23.0.1'
-    compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile 'com.android.support:design:23.1.0'
+    compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.android.support:support-v4:23.1.0'
+
+    // Google Play Services
+    compile 'com.google.android.gms:play-services-location:8.1.0'
 
     // Async http client
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
@@ -44,6 +47,10 @@ dependencies {
 
     // Image Loader
     compile 'com.github.bumptech.glide:glide:3.6.1'
+
+    compile 'pl.charmas.android:android-reactive-location:0.8@aar'
+    compile 'io.reactivex:rxjava:1.0.14'
+    compile 'io.reactivex:rxandroid:0.25.0'
 
     // Appearence
     compile 'uk.co.chrisjenx:calligraphy:2.1.0'
