--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
 
     // Google Play Services
     compile 'com.google.android.gms:play-services-location:8.1.0'
+    compile 'com.google.android.gms:play-services-analytics:8.1.0'
 
     // Async http client
     compile 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
