--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="py.com.purplemammoth.apps.yoelijopy">
+    package="py.com.purpleapps.yovotopy">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
-        android:name=".YoElijoPyApplication"
+        android:name="py.com.purpleapps.yovotopy.YoVotoPyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ui.MainTabActivity"
+            android:name="py.com.purpleapps.yovotopy.ui.MainTabActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -23,14 +23,18 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.ConsultaPadronActivity"
+            android:name="py.com.purpleapps.yovotopy.ui.ConsultaPadronActivity"
             android:label="@string/title_activity_consulta_padron"
-            android:parentActivityName=".ui.MainTabActivity"
+            android:parentActivityName="py.com.purpleapps.yovotopy.ui.MainTabActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="py.com.purplemammoth.apps.yoelijopy.ui.MainTabActivity" />
+                android:value="py.com.purpleapps.yovotopy.ui.MainTabActivity" />
         </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/gps_places_api_key" />
     </application>
 
 </manifest>
