--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name="py.com.purpleapps.yovotopy.YoVotoPyApplication"
+        android:name=".YoVotoPyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
-            android:name="py.com.purpleapps.yovotopy.ui.MainTabActivity"
+            android:name=".ui.MainTabActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -24,11 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name="py.com.purpleapps.yovotopy.ui.ConsultaPadronActivity"
+            android:name=".ui.ConsultaPadronActivity"
             android:label="@string/title_activity_consulta_padron"
-            android:parentActivityName="py.com.purpleapps.yovotopy.ui.MainTabActivity"
+            android:parentActivityName=".ui.MainTabActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -44,8 +42,10 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <!-- Optionally, register AnalyticsReceiver and AnalyticsService to support background
-dispatching on non-Google Play devices -->
+        <!--
+Optionally, register AnalyticsReceiver and AnalyticsService to support background
+dispatching on non-Google Play devices
+        -->
         <receiver
             android:name="com.google.android.gms.analytics.AnalyticsReceiver"
             android:enabled="true">
@@ -53,13 +53,16 @@ dispatching on non-Google Play devices -->
                 <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH" />
             </intent-filter>
         </receiver>
+
         <service
             android:name="com.google.android.gms.analytics.AnalyticsService"
             android:enabled="true"
             android:exported="false" />
 
-        <!-- Optionally, register CampaignTrackingReceiver and CampaignTrackingService to enable
-     installation campaign reporting -->
+        <!--
+     Optionally, register CampaignTrackingReceiver and CampaignTrackingService to enable
+     installation campaign reporting
+        -->
         <receiver
             android:name="com.google.android.gms.analytics.CampaignTrackingReceiver"
             android:exported="true">
@@ -67,8 +70,18 @@ dispatching on non-Google Play devices -->
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
         </receiver>
+
         <service android:name="com.google.android.gms.analytics.CampaignTrackingService" />
 
+        <activity
+            android:name=".ui.ExplorarListActivity"
+            android:label="@string/title_activity_explorar_list"
+            android:parentActivityName=".ui.MainTabActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="py.com.purpleapps.yovotopy.ui.MainTabActivity" />
+        </activity>
     </application>
 
 </manifest>
